--- a/css/output.css
+++ b/css/output.css
@@ -598,24 +598,168 @@ video {
   top: 0px;
 }
 
+.top-\[\] {
+  top: ;
+}
+
+.top-\[567px\] {
+  top: 567px;
+}
+
+.top-\[676px\] {
+  top: 676px;
+}
+
+.top-\[876px\] {
+  top: 876px;
+}
+
+.top-\[1076px\] {
+  top: 1076px;
+}
+
+.bottom-\[1076px\] {
+  bottom: 1076px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.top-\[667px\] {
+  top: 667px;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-\[467px\] {
+  top: 467px;
+}
+
+.top-\[767px\] {
+  top: 767px;
+}
+
+.top-\[67px\] {
+  top: 67px;
+}
+
+.top-\[967px\] {
+  top: 967px;
+}
+
+.top-\[600px\] {
+  top: 600px;
+}
+
+.top-\[630px\] {
+  top: 630px;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.-top-3\/4 {
+  top: -75%;
+}
+
+.top-3\/4 {
+  top: 75%;
+}
+
 .left-0 {
   left: 0px;
 }
 
-.top-full {
-  top: 100%;
+.left-1 {
+  left: 0.25rem;
 }
 
-.-top-0 {
-  top: -0px;
+.left-1\/2 {
+  left: 50%;
 }
 
-.-top-5 {
-  top: -1.25rem;
+.left-1\/3 {
+  left: 33.333333%;
 }
 
-.-top-1 {
-  top: -0.25rem;
+.left-1\/4 {
+  left: 25%;
+}
+
+.-bottom-0 {
+  bottom: -0px;
+}
+
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
+.-bottom-2 {
+  bottom: -0.5rem;
+}
+
+.left-2\/3 {
+  left: 66.666667%;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[40\] {
+  left: 40;
+}
+
+.left-\[40\%\] {
+  left: 40%;
+}
+
+.left-\[30\%\] {
+  left: 30%;
+}
+
+.left-\[20\%\] {
+  left: 20%;
+}
+
+.-bottom-0\.5 {
+  bottom: -0.125rem;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.-bottom-3 {
+  bottom: -0.75rem;
+}
+
+.left-\[18\%\] {
+  left: 18%;
+}
+
+.left-\[16\%\] {
+  left: 16%;
+}
+
+.left-\[17\%\] {
+  left: 17%;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .m-auto {
@@ -634,34 +778,14 @@ video {
   margin: 0.5rem;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.my-7 {
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
-.my-14 {
-  margin-top: 3.5rem;
-  margin-bottom: 3.5rem;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .my-20 {
@@ -669,104 +793,62 @@ video {
   margin-bottom: 5rem;
 }
 
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
-.mx-9 {
-  margin-left: 2.25rem;
-  margin-right: 2.25rem;
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
-.ml-7 {
-  margin-left: 1.75rem;
-}
-
-.ml-28 {
-  margin-left: 7rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.mr-0 {
-  margin-right: 0px;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
-}
-
-.ml-0 {
-  margin-left: 0px;
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .ml-16 {
   margin-left: 4rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
 .mr-40 {
   margin-right: 10rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
 }
 
 .flex {
   display: flex;
 }
 
-.size-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-10 {
   height: 2.5rem;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
 }
 
 .h-4 {
@@ -777,88 +859,72 @@ video {
   height: 11rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
+.h-20 {
+  height: 5rem;
 }
 
-.w-8 {
-  width: 2rem;
+.h-24 {
+  height: 6rem;
 }
 
-.w-full {
-  width: 100%;
+.h-16 {
+  height: 4rem;
 }
 
-.w-10 {
-  width: 2.5rem;
+.h-2 {
+  height: 0.5rem;
 }
 
-.w-24 {
-  width: 6rem;
+.h-14 {
+  height: 3.5rem;
 }
 
-.w-14 {
-  width: 3.5rem;
+.h-1 {
+  height: 0.25rem;
 }
 
-.w-20 {
-  width: 5rem;
+.h-\[1px\] {
+  height: 1px;
 }
 
-.w-44 {
-  width: 11rem;
+.h-8 {
+  height: 2rem;
 }
 
-.w-6 {
-  width: 1.5rem;
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-\[\] {
+  height: ;
 }
 
 .w-1\/2 {
   width: 50%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-4 {
   width: 1rem;
 }
 
-.w-\[\] {
-  width: ;
+.w-6 {
+  width: 1.5rem;
 }
 
-.w-\[70\] {
-  width: 70;
+.w-8 {
+  width: 2rem;
 }
 
-.w-\[70\%\] {
-  width: 70%;
+.w-\[75\%\] {
+  width: 75%;
 }
 
-.w-\[\%\] {
-  width: %;
-}
-
-.w-\[69\%\] {
-  width: 69%;
-}
-
-.w-\[6\%\] {
-  width: 6%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
-}
-
-.w-\[72\%\] {
-  width: 72%;
-}
-
-.w-\[74\%\] {
-  width: 74%;
+.w-auto {
+  width: auto;
 }
 
 .w-fit {
@@ -866,28 +932,88 @@ video {
   width: fit-content;
 }
 
-.w-\[75\%\] {
+.w-20 {
+  width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[55\%\] {
+  width: 55%;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-\[80\%\%\] {
+  width: 80%%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-3\/4 {
   width: 75%;
 }
 
-.w-52 {
-  width: 13rem;
+.w-\[90\%\] {
+  width: 90%;
 }
 
-.w-28 {
-  width: 7rem;
-}
-
-.w-auto {
-  width: auto;
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .flex-col {
   flex-direction: column;
 }
 
-.items-start {
-  align-items: flex-start;
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -902,26 +1028,24 @@ video {
   justify-content: flex-end;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-2 {
   gap: 0.5rem;
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -930,42 +1054,24 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-20 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
-
-.overflow-auto {
-  overflow: auto;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -976,8 +1082,16 @@ video {
   border-radius: 0.5rem;
 }
 
-.border {
-  border-width: 1px;
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .border-0 {
@@ -988,28 +1102,10 @@ video {
   border-width: 1px;
 }
 
-.border-\[0\.1px\] {
-  border-width: 0.1px;
-}
-
-.border-y {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-}
-
-.border-white {
+.border-x-slate-800 {
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-\[1-\] {
-  border-color: 1-;
-}
-
-.border-x-white {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
-  border-right-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-left-color: rgb(30 41 59 / var(--tw-border-opacity));
+  border-right-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
 .border-y-black {
@@ -1018,42 +1114,9 @@ video {
   border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-x-slate-50 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(248 250 252 / var(--tw-border-opacity));
-  border-right-color: rgb(248 250 252 / var(--tw-border-opacity));
-}
-
-.border-x-slate-500 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(100 116 139 / var(--tw-border-opacity));
-  border-right-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-.border-x-slate-800 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(30 41 59 / var(--tw-border-opacity));
-  border-right-color: rgb(30 41 59 / var(--tw-border-opacity));
-}
-
-.bg-green-400 {
+.bg-\[\#16181c\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(22 24 28 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -1061,33 +1124,9 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#16181c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 24 28 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#212329\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 35 41 / var(--tw-bg-opacity));
 }
 
 .bg-red-200 {
@@ -1095,37 +1134,41 @@ video {
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
-.p-4 {
-  padding: 1rem;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-3 {
   padding: 0.75rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-28 {
@@ -1133,19 +1176,14 @@ video {
   padding-right: 7rem;
 }
 
-.py-52 {
-  padding-top: 13rem;
-  padding-bottom: 13rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-0 {
@@ -1153,14 +1191,9 @@ video {
   padding-bottom: 0px;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-2\.5 {
@@ -1168,108 +1201,22 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pl-40 {
-  padding-left: 10rem;
-}
-
-.pl-52 {
-  padding-left: 13rem;
-}
-
-.pl-32 {
-  padding-left: 8rem;
-}
-
-.pl-28 {
-  padding-left: 7rem;
-}
-
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pb-6 {
   padding-bottom: 1.5rem;
 }
 
-.pr-11 {
-  padding-right: 2.75rem;
-}
-
-.pr-36 {
-  padding-right: 9rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
-.pr-16 {
-  padding-right: 4rem;
-}
-
 .pr-20 {
   padding-right: 5rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-24 {
-  padding-left: 6rem;
-}
-
-.pl-\[\] {
-  padding-left: ;
-}
-
-.pl-\[8rem\] {
-  padding-left: 8rem;
-}
-
-.pl-\[5rem\] {
-  padding-left: 5rem;
-}
-
-.pl-\[rem\] {
-  padding-left: rem;
-}
-
-.pl-\[4rem\] {
-  padding-left: 4rem;
-}
-
-.pl-\[2rem\] {
-  padding-left: 2rem;
-}
-
-.pl-\[1rem\] {
-  padding-left: 1rem;
-}
-
-.pl-\[0rem\] {
-  padding-left: 0rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
 }
 
 .text-center {
@@ -1285,14 +1232,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1307,24 +1254,9 @@ video {
   font-weight: 600;
 }
 
-.text-white {
+.text-blue-500 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -1332,23 +1264,28 @@ video {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.text-blue-500 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .underline {
   text-decoration-line: underline;
 }
 
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-md {
-  --tw-blur: blur(12px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .blur-sm {
@@ -1365,57 +1302,16 @@ video {
   cursor: pointer;
 }
 
-.hover\:rounded-lg:hover {
-  border-radius: 0.5rem;
-}
-
 .hover\:rounded-2xl:hover {
   border-radius: 1rem;
 }
 
-.hover\:rounded:hover {
-  border-radius: 0.25rem;
-}
-
-.hover\:rounded-3xl:hover {
-  border-radius: 1.5rem;
-}
-
-.hover\:border:hover {
-  border-width: 1px;
+.hover\:rounded-lg:hover {
+  border-radius: 0.5rem;
 }
 
 .hover\:border-0:hover {
   border-width: 0px;
-}
-
-.hover\:bg-gray-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-950:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 7 18 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\]:hover {
-  background-color: ;
 }
 
 .hover\:bg-\[\#16181c\]:hover {
@@ -1426,9 +1322,4 @@ video {
 .hover\:bg-\[\#212329\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(33 35 41 / var(--tw-bg-opacity));
-}
-
-.hover\:py-2:hover {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
