--- a/css/output.css
+++ b/css/output.css
@@ -863,6 +863,15 @@ video {
   width: max-content;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
 .max-w-0 {
   max-width: 0px;
 }
